objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <description>Order information related to the Care Plan.</description>
	<historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>2</archiveRetentionYears>
        <description>HIPAA Audit Log Retention Order__c</description>
        <gracePeriodDays>0</gracePeriodDays>
    </historyRetentionPolicy>
    <label>Order</label>
    <nameField>
        <label>Order ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>