objects/Order__c/fields/ApheresisPickUpDate__c.field-meta.xml
<CustomField>
    <fullName>ApheresisPickUpDate__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Apheresis Pick-up date of the order.</description>
    <label>Apheresis Pick-up Date</label>
    <type>Date</type>
</CustomField>