objects/Order__c/fields/ApheresisPO__c.field-meta.xml
<CustomField>
    <fullName>ApheresisPO__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>This field is used for Integration, stores the Apheresis PO # value.</description>
    <externalId>true</externalId>
    <label>Apheresis PO #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>