objects/Order__c/fields/ApheresisPOStatus__c.field-meta.xml
<CustomField>
    <fullName>ApheresisPOStatus__c</fullName>
    <description>Hidden field to track Apheresis PO status</description>
    <label>Apheresis PO Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>