objects/Order__c/fields/ApheresisSite__c.field-meta.xml
<CustomField>
    <fullName>ApheresisSite__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Apheresis Site recorded on Care Plan.</description>
    <label>Apheresis Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Apheresis Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Apheresis Site)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>