objects/Order__c/fields/ApheresisSitePickupAddress__c.field-meta.xml
<CustomField>
    <fullName>ApheresisSitePickupAddress__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Apheresis Site Pickup Address</description>
    <label>Apheresis Site Pickup Address</label>
    <length>250</length>
    <type>Text</type>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
</CustomField>