objects/Order__c/fields/ASNToAnaplanStatus__c.field-meta.xml
<CustomField>
    <fullName>ASNToAnaplanStatus__c</fullName>
    <description>Apheresis Shipment Notice to Anaplan Status</description>
    <label>ASN to Anaplan Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retry</fullName>
            </value>
            <value>
                <fullName>Manually Created</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
                <isActive>false</isActive>
                <label>Failure</label>
            </value>
            <value>
                <fullName>Success</fullName>
                <isActive>false</isActive>
                <label>Success</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>