objects/Order__c/fields/AtlasBatchNumber__c.field-meta.xml
<CustomField>
    <fullName>AtlasBatchNumber__c</fullName>
    <description>This field is used for Integration, stores the atlas batch number value.</description>
    <externalId>true</externalId>
    <label>Atlas Batch Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>