objects/Order__c/fields/AtlasOrderId__c.field-meta.xml
<CustomField>
    <fullName>AtlasOrderId__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>This field is used for Integration, stores the Atlas Order ID value.</description>
    <externalId>true</externalId>
    <label>Atlas Order ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>