objects/Order__c/fields/AttestedForCompletion__c.field-meta.xml
<CustomField>
    <fullName>AttestedForCompletion__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <label>Attested for Completion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>