objects/Order__c/fields/CancellationComments__c.field-meta.xml
<CustomField>
    <fullName>CancellationComments__c</fullName>
    <description>Captures Cancellation Comments on a canceled Order</description>
    <label>Cancellation Comments</label>
    <length>250</length>
    <type>Text</type>
</CustomField>