objects/Order__c/fields/CarePlanID__c.field-meta.xml
<CustomField>
    <fullName>CarePlanID__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Care Plan.</description>
    <label>Care Plan ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>