objects/Order__c/fields/CartOrderId__c.field-meta.xml
<CustomField>
    <fullName>CartOrderId__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>This field is used for Integration. Stores the Order ID value.</description>
    <externalId>true</externalId>
    <label>CAR-T Order ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>