objects/Order__c/fields/ConfirmedFPDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedFPDeliveryDate__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Confirmed FP Delivery Date of the order.</description>
    <label>Confirmed DP Delivery Date from Site</label>
    <type>Date</type>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
</CustomField>