objects/Order__c/fields/ConsentToSubmitProductForResearch__c.field-meta.xml
<CustomField>
    <fullName>ConsentToSubmitProductForResearch__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Consent to Submit Product for Research.</description>
    <label>Consent to Submit Product for Research</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>