objects/Order__c/fields/Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Coordinator__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CAR-T Coordinator associated to the related Care Plan.</description>
    <label>CAR-T Coordinator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>