objects/Order__c/fields/CryoCellDropOffDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>CryoCellDropOffDateAndTime__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Cryo Cell Drop-off Date and Time related to the order.</description>
    <label>Cryo Cell Drop-Off Date and Time</label>
    <type>DateTime</type>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
</CustomField>