objects/Order__c/fields/CryoCellPickupDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>CryoCellPickupDateAndTime__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Cryo Cell Pickup Date and Time related to the order.</description>
    <label>Cryo Cell Pickup Date and Time</label>
    <type>DateTime</type>
</CustomField>