objects/Order__c/fields/CryoSite__c.field-meta.xml
<CustomField>
    <fullName>CryoSite__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cryo Site recorded on Care Plan.</description>
    <label>Cryo Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cryo Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Cryo Site)</relationshipLabel>
    <relationshipName>Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>