objects/Order__c/fields/CryoSiteDropOffAddress__c.field-meta.xml
<CustomField>
    <fullName>CryoSiteDropOffAddress__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Cryo Site Drop-Off Address</description>
    <label>Cryo Site Drop-Off Address</label>
    <length>250</length>
    <type>Text</type>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
</CustomField>