objects/Order__c/fields/CryoSitePickupAddress__c.field-meta.xml
<CustomField>
    <fullName>CryoSitePickupAddress__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Cryo Site Pickup Address</description>
    <label>Cryo Site Pickup Address</label>
    <length>250</length>
    <type>Text</type>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
</CustomField>