objects/Order__c/fields/CryoSiteType__c.field-meta.xml
<CustomField>
    <fullName>CryoSiteType__c</fullName>
    <description>This field holds value of Cryo Site records type field value</description>
    <formula>TEXT(CryoSite__r.Type)</formula>
    <label>Cryo Site Type</label>
    <type>Text</type>
</CustomField>