objects/Order__c/fields/CryoType__c.field-meta.xml
<CustomField>
    <fullName>CryoType__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Cryo type related to the associated cryo site.</description>
    <label>Cryo Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
                <isActive>false</isActive>
                <label>3rd Party</label>
            </value>
            <value>
                <fullName>Raritan</fullName>
                <isActive>false</isActive>
                <label>Raritan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>