objects/Order__c/fields/DateOfCancellation__c.field-meta.xml
<CustomField>
    <fullName>DateOfCancellation__c</fullName>
    <description>Date when order cancellation is confirmed</description>
    <label>Date of Cancellation Confirmation</label>
    <type>Date</type>
</CustomField>