objects/Order__c/fields/DateOfCancellationRequest__c.field-meta.xml
<CustomField>
    <fullName>DateOfCancellationRequest__c</fullName>
    <description>Date when the order cancellation request is placed</description>
    <label>Date of Cancellation Request</label>
    <type>Date</type>
</CustomField>