objects/Order__c/fields/DateOfCancellationRequestTCP__c.field-meta.xml
<CustomField>
    <fullName>DateOfCancellationRequestTCP__c</fullName>
    <inlineHelpText>To Show the date when Cancel Order is initiated from TCP</inlineHelpText>
    <label>Date of Cancellation Request</label>
    <type>Date</type>
</CustomField>