objects/Order__c/fields/DIN__c.field-meta.xml
<CustomField>
    <fullName>DIN__c</fullName>
    <description>Field to track courier shipment details in the Vineti portal.</description>
    <externalId>true</externalId>
    <label>DIN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>