objects/Order__c/fields/DPOkToShipToSAPStatus__c.field-meta.xml
<CustomField>
    <fullName>DPOkToShipToSAPStatus__c</fullName>
    <description>DP Ok to Ship to SAP Status</description>
    <label>DP Ok to Ship to SAP Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retry</fullName>
            </value>
            <value>
                <fullName>Manually Created</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
                <isActive>false</isActive>
                <label>Failure</label>
            </value>
            <value>
                <fullName>Success</fullName>
                <isActive>false</isActive>
                <label>Success</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>