objects/Order__c/fields/EstimatedDrugProductDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDrugProductDeliveryDate__c</fullName>
    <label>Estimated Drug Product Delivery Date</label>
    <type>Date</type>
</CustomField>