objects/Order__c/fields/FinalDPDateinVineti__c.field-meta.xml
<CustomField>
    <fullName>FinalDPDateinVineti__c</fullName>
    <description>Final DP Date that is coming from Vineti</description>
    <label>Final DP Date Updated in Vineti</label>
    <length>255</length>
    <type>Text</type>
</CustomField>