objects/Order__c/fields/FinalDPDropOffDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>FinalDPDropOffDateAndTime__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Final DP Drop-off Date and Time of the related order.</description>
    <label>Final DP Drop-Off Date and Time</label>
    <type>DateTime</type>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
</CustomField>