objects/Order__c/fields/FinalDPPickupDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>FinalDPPickupDateAndTime__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Final DP Pickup Date and Time related to the order.</description>
    <label>Final DP Pickup Date and Time</label>
    <type>DateTime</type>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
</CustomField>