objects/Order__c/fields/FreshCellDropOffDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>FreshCellDropOffDateAndTime__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Fresh Cell Drop Off Date and Time related to the order.</description>
    <label>Fresh Cell Drop Off Date and Time</label>
    <type>DateTime</type>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
</CustomField>