objects/Order__c/fields/FreshCellPickupDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>FreshCellPickupDateAndTime__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Fresh Cell Pickup Date and Time related to the order.</description>
    <label>Fresh Cell Pickup Date and Time</label>
    <type>DateTime</type>
</CustomField>