objects/Order__c/fields/HoldComments__c.field-meta.xml
<CustomField>
    <fullName>HoldComments__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Hold Comments of the treatment process.</description>
    <label>Hold Comments</label>
    <type>TextArea</type>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
</CustomField>