objects/Order__c/fields/HoldReason__c.field-meta.xml
<CustomField>
    <fullName>HoldReason__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Hold Reason of the treatment process.</description>
    <label>Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PO not available</fullName>
            </value>
            <value>
                <fullName>PO issue</fullName>
            </value>
            <value>
                <fullName>Consent forms issue</fullName>
            </value>
            <value>
                <fullName>Patient not ready for infusion</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>