objects/Order__c/fields/InfusionDate__c.field-meta.xml
<CustomField>
    <fullName>InfusionDate__c</fullName>
    <description>Infusion Date of the drug.</description>
    <label>Infusion Date</label>
    <type>Date</type>
</CustomField>