objects/Order__c/fields/ManufacturingMilestoneDateTime__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingMilestoneDateTime__c</fullName>
    <description>Manufacturing date/time of the related order milestone.</description>
    <label>Manufacturing Milestone Date Time</label>
    <type>DateTime</type>
</CustomField>