objects/Order__c/fields/ManufacturingMilestoneToAnaplanStatus__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingMilestoneToAnaplanStatus__c</fullName>
    <description>This field is used to hold status of ManufacturingMilstonesUpdateService</description>
    <label>ManufacturingMilestone To Anaplan Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manually Created</fullName>
            </value>
            <value>
                <fullName>Retry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>