objects/Order__c/fields/ManufacturingSite__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingSite__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manufacturing Site recorded on Care Plan.</description>
    <label>Manufacturing Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Manufacturing Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Manufacturing Site)</relationshipLabel>
    <relationshipName>Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>