objects/Order__c/fields/ManufacturingSiteDropOffAddress__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingSiteDropOffAddress__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Manufacturing  Site Drop Off Address</description>
    <label>Manufacturing  Site Drop Off Address</label>
    <length>250</length>
    <type>Text</type>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
</CustomField>