objects/Order__c/fields/ManufacturingSitePickupAddress__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingSitePickupAddress__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Manufacturing  Site Pickup Address</description>
    <label>Manufacturing  Site Pickup Address</label>
    <length>250</length>
    <type>Text</type>
     <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
</CustomField>