objects/Order__c/fields/ManufacturingStatus__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingStatus__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Manufacturing Status related to the order.</description>
    <label>Manufacturing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>True</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>QC/QA Complete</fullName>
            </value>
            <value>
                <fullName>Manufacturing Started</fullName>
            </value>
            <value>
                <fullName>Manufacturing Complete</fullName>
            </value>
            <value>
                <fullName>QR Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>