objects/Order__c/fields/OrderPlacementInfo__c.field-meta.xml
<CustomField>
    <fullName>OrderPlacementInfo__c</fullName>
    <description>Hidden field to track order placement status.</description>
    <label>Order Placement Info</label>
    <length>20</length>
    <type>Text</type>
</CustomField>