objects/Order__c/fields/OrderRescheduledinVineti__c.field-meta.xml
<CustomField>
    <fullName>OrderRescheduledinVineti__c</fullName>
    <description>Order Rescheduled Updated in Vineti System.</description>
    <label>Order Rescheduled in Vineti</label>
    <length>255</length>
    <type>Text</type>
</CustomField>