objects/Order__c/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Status of the order.</description>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order Submitted</fullName>
            </value>
            <value>
                <fullName>Order Verified</fullName>
            </value>
            <value>
                <fullName>Order In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Order Rescheduled</fullName>
            </value>
            <value>
                <fullName>Order Cancellation Requested</fullName>
            </value>
            <value>
                <fullName>Order Cancelled</fullName>
            </value>
            <value>
                <fullName>Drug Product Delivery Date Scheduled</fullName>
            </value>
            <value>
                <fullName>Drug Product Delivered</fullName>
            </value>
            <value>
                <fullName>Infusion Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>