objects/Order__c/fields/PatientID__c.field-meta.xml
<CustomField>
    <fullName>PatientID__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Patient Id autonumber from The patient</description>
    <formula>Patient__r.PatientID__c</formula>
    <label>Patient ID</label>
    <type>Text</type>
</CustomField>