objects/Order__c/fields/PatientIdForEmailAlerts__c.field-meta.xml
<CustomField>
		<fullName>PatientIdForEmailAlerts__c</fullName>
        <formula>Patient__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Id For Email</label>
        <type>Text</type>
</CustomField>