objects/Order__c/fields/PatientStatus__c.field-meta.xml
<CustomField>
    <fullName>PatientStatus__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Status of the enrolled Patient.</description>
    <formula>TEXT(CarePlanID__r.Account.Status__c)</formula>
    <label>Patient Status</label>
    <type>Text</type>
</CustomField>