objects/Order__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Physician associated to the related Care Plan.</description>
    <label>Physician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Physician)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>