objects/Order__c/fields/POStatus__c.field-meta.xml
<CustomField>
    <fullName>POStatus__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>PO Status of the order.</description>
    <label>PO Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PO Pending</fullName>
                <default>true</default>
                <label>PO Pending</label>
            </value>
            <value>
                <fullName>PO Received</fullName>
            </value>
            <value>
                <fullName>PO Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>