objects/Order__c/fields/ProjectedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectedDeliveryDate__c</fullName>
    <description>This field is used to store Apheresis Projected Delivery Date From Anaplan</description>
    <label>Projected Delivery Date From Anaplan</label>
    <type>Date</type>
</CustomField>