objects/Order__c/fields/ProjectedProductDeliveryWindow__c.field-meta.xml
<CustomField>
    <fullName>ProjectedProductDeliveryWindow__c</fullName>
    <description>Projected Product Delivery Window date for when the estimated date for the manufactured product to be delivered to the infusion site.</description>
    <label>Projected Product Delivery Window</label>
    <length>30</length>
    <type>Text</type>
</CustomField>