objects/Order__c/fields/QTCPOtoSDStatus__c.field-meta.xml
<CustomField>
    <fullName>QTCPOtoSDStatus__c</fullName>
    <description>This field is used to keep a track of shipping status of an Order PO to the Specialty Distributor</description>
    <label>QTC PO to SD Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
                <isActive>false</isActive>
                <label>Success</label>
            </value>
            <value>
                <fullName>Failure</fullName>
                <isActive>false</isActive>
                <label>Failure</label>
            </value>
            <value>
                <fullName>Retry</fullName>
            </value>
            <value>
                <fullName>Manually Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>