objects/Order__c/fields/ReasonForOrderWithdrawal__c.field-meta.xml
<CustomField>
    <fullName>ReasonForOrderWithdrawal__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Reason for Order Withdrawal.</description>
    <label>Reason for Order Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient withdrew consent for treatment with Janssen CAR-T</fullName>
            </value>
            <value>
                <fullName>Patient health-related reason</fullName>
            </value>
            <value>
                <fullName>Other patient-related reason</fullName>
            </value>
            <value>
                <fullName>Other non-patient related reason</fullName>
            </value>
            <value>
                <fullName>Patient Health – Deceased</fullName>
                <isActive>false</isActive>
                <label>Patient Health – Deceased</label>
            </value>
            <value>
                <fullName>Patient Health – Disease Progression</fullName>
                <isActive>false</isActive>
                <label>Patient Health – Disease Progression</label>
            </value>
            <value>
                <fullName>Patient opted out of treatment</fullName>
                <isActive>false</isActive>
                <label>Patient opted out of treatment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>