objects/Order__c/fields/ReasonforReschedule__c.field-meta.xml
<CustomField>
    <fullName>ReasonforReschedule__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Reason for Re-schedule of the apheresis pick-up date.</description>
    <label>Reason for Reschedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Patient Health</fullName>
            </value>
            <value>
                <fullName>Patient Scheduling Conflict</fullName>
            </value>
            <value>
                <fullName>Site Scheduling Conflict</fullName>
            </value>
            <value>
                <fullName>Weather/Travel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>