objects/Order__c/fields/ReschedulingComments__c.field-meta.xml
<CustomField>
    <fullName>ReschedulingComments__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Rescheduling Comments of the Apheresis pick-up date.</description>
    <label>Rescheduling Comments</label>
    <type>TextArea</type>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
</CustomField>