objects/Order__c/fields/SalesOrderToSAPStatus__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderToSAPStatus__c</fullName>
    <description>This field stores information related to Sales Order SAP Callout status</description>
    <label>Sales Order to SAP Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retry</fullName>
            </value>
            <value>
                <fullName>Manually Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>