objects/Order__c/fields/SDPO__c.field-meta.xml
<CustomField>
    <fullName>SDPO__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>SD PO# integrated with SD.</description>
    <label>SD PO#</label>
    <length>25</length>
    <type>Text</type>
</CustomField>