objects/Order__c/fields/ShippingStatus__c.field-meta.xml
<CustomField>
    <fullName>ShippingStatus__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Shipping status of the order.</description>
    <label>Shipping Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shipping Fresh Cells</fullName>
            </value>
            <value>
                <fullName>Fresh Cells Delivered</fullName>
            </value>
            <value>
                <fullName>Shipping Cryo-ed Cells</fullName>
            </value>
            <value>
                <fullName>Cryo-ed Cells Delivered</fullName>
            </value>
            <value>
                <fullName>Shipping Drug Product</fullName>
            </value>
            <value>
                <fullName>Drug Product Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>