objects/Order__c/fields/SitePO__c.field-meta.xml
<CustomField>
    <fullName>SitePO__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Site PO# from TCP.</description>
    <label>Site PO#</label>
    <length>25</length>
    <type>Text</type>
</CustomField>