objects/Order__c/fields/SlotDate__c.field-meta.xml
<CustomField>
    <fullName>SlotDate__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Slot date of the treatment.</description>
    <label>Slot Date</label>
    <type>Date</type>
</CustomField>