objects/Order__c/fields/SlotID__c.field-meta.xml
<CustomField>
    <fullName>SlotID__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Slot ID of the treatment.</description>
    <label>Slot ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>