objects/Order__c/fields/SlotStatus__c.field-meta.xml
<CustomField>
    <fullName>SlotStatus__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Slot status of the order.</description>
    <inlineHelpText>If the Slot Status is &apos;Slot Rejected&apos; then please select a new Apheresis Pickup Date.</inlineHelpText>
    <label>Slot Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Slot Requested</fullName>
            </value>
            <value>
                <fullName>Slot Confirmed</fullName>
            </value>
            <value>
                <fullName>Slot Blocked</fullName>
                <isActive>false</isActive>
                <label>Slot Blocked</label>
            </value>
            <value>
                <fullName>Slot Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>