objects/Order__c/fields/SpecifyTheOtherReasonForReschedule__c.field-meta.xml
<CustomField>
    <fullName>SpecifyTheOtherReasonForReschedule__c</fullName>
    <description>This field stores the reason of rescheduling order when user reschedules the order submission</description>
    <label>Specify The Other Reason For Reschedule</label>
    <type>TextArea</type>
</CustomField>