objects/Order__c/fields/TreatmentSiteDropOffAddress__c.field-meta.xml
<CustomField>
    <fullName>TreatmentSiteDropOffAddress__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Drop-off address of the related treatment site.</description>
    <label>Treatment Site Drop-Off Address</label>
    <length>250</length>
    <type>Text</type>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
</CustomField>